<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">geoQuiz</string>
    <string name="action_settings">Settings</string>
    <string name="infoButtonDescription">infoButton</string>
    <string name="scoresButtonDescription">scoresButton</string>
    <string name="settingsButtonDescription">settingsButton</string>
    <string name="orientacionButton">Orientación</string>
    <string name="capitalesButton">Capitales</string>
    <string name="mapaButton">Consultar mapa</string>
    <string name="no_scores">No hay puntuaciones aún</string>
    <string name="usuario">Nombre de usuario: </string>
    <string name="borrar">Borrar puntuaciones</string>

</resources>