<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/pantalla1"
    tools:context=".PantallaPrincipal" >
    
    <Button
        android:id="@+id/capitalesButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/orientacionButton"
        android:onClick="onClick"
        android:text="@string/capitalesButton" />

    <Button
        android:id="@+id/mapaButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/capitalesButton"
        android:layout_marginTop="23dp"
        android:onClick="onClick"
        android:text="@string/mapaButton"
        android:color="#38B5E5" />

    <Button
        android:id="@+id/orientacionButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/infoButton"
        android:layout_marginTop="99dp"
        android:onClick="onClick"
        android:text="@string/orientacionButton"
        android:color="#38B5E5" />

    <ImageButton
        android:id="@+id/infoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/infoButtonDescription"
        android:onClick="onClick"
        android:src="@drawable/action_about" />

    <ImageButton
        android:id="@+id/scoresButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/infoButton"
        android:contentDescription="@string/scoresButtonDescription"
        android:onClick="onClick"
        android:src="@drawable/ic_action_star" />

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/orientacionButton"
        android:layout_toLeftOf="@+id/scoresButton"
        android:contentDescription="@string/settingsButtonDescription"
        android:onClick="onClick"
        android:src="@drawable/action_settings" />
   
</RelativeLayout>